--- a/app/src/main/res/layout/activity_servicio_editar_agregar.xml
+++ b/app/src/main/res/layout/activity_servicio_editar_agregar.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".appServicio.Servicio_editar_agregar">
+    tools:context=".activities.appServicio.Servicio_editar_agregar">
 
     <TextView
         android:id="@+id/textView2"
