--- a/app/src/main/res/layout/lista_clientes_activity.xml
+++ b/app/src/main/res/layout/lista_clientes_activity.xml
@@ -44,7 +44,7 @@
         app:layout_constraintVertical_bias="0.75" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnVolverC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
