--- a/app/src/main/res/layout/activity_agregar_proveedor.xml
+++ b/app/src/main/res/layout/activity_agregar_proveedor.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nuevo Cliente"
+            android:text="Nuevo Proveedor"
             android:textSize="24sp"
             android:textStyle="bold"
             android:layout_gravity="center_horizontal"
@@ -29,10 +29,10 @@
             android:textStyle="bold"/>
 
         <EditText
-            android:id="@+id/etIdCliente"
+            android:id="@+id/etIdProveedor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Cédula o Ruc del Cliente"
+            android:hint="Cédula o RUC del proveedor"
             android:inputType="text" />
 
         <TextView
@@ -46,21 +46,7 @@
             android:id="@+id/etNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nombre del Cliente"
-            android:inputType="text" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dirección:"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"/>
-
-        <EditText
-            android:id="@+id/etDireccion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Dirección del Cliente"
+            android:hint="Nombre del Proveedor"
             android:inputType="text" />
 
         <TextView
@@ -74,21 +60,24 @@
             android:id="@+id/etTelefono"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Teléfono del Cliente"
+            android:hint="Teléfono del Proveedor"
             android:inputType="phone" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tipo de Cliente:"
+            android:text="Descripción:"
             android:textStyle="bold"
             android:layout_marginTop="16dp"/>
 
-        <Spinner
-            android:id="@+id/spnTipoCliente"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/etDescripcion"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:entries="@array/tipos_cliente" />
+            android:gravity="start|top"
+            android:hint="Descripción del Proveedor"
+            android:inputType="textMultiLine"
+            android:minLines="3" />
 
         <LinearLayout
             android:layout_width="match_parent"
