--- a/app/src/main/res/layout/activity_agregar_orden_servicio.xml
+++ b/app/src/main/res/layout/activity_agregar_orden_servicio.xml
@@ -24,17 +24,17 @@
         android:layout_width="90dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:text="o Seleccione un Cliente:"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <Spinner
         android:id="@+id/spnClienteOS"
         android:layout_width="270dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView13" />
 
@@ -42,11 +42,10 @@
         android:id="@+id/etFechaOrdenServicio"
         android:layout_width="270dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="10dp"
         android:ems="10"
         android:inputType="date"
-        android:text="dd-mm-yyyy"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="dd-MM-yyyy"
+        app:layout_constraintStart_toStartOf="@+id/spnClienteOS"
         app:layout_constraintTop_toTopOf="@+id/textView14" />
 
     <TextView
@@ -54,7 +53,7 @@
         android:layout_width="90dp"
         android:layout_height="20dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:text="Fecha:"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,40 +64,17 @@
         android:layout_width="90dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:text="Tipo de Vehiculo:"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
-    <EditText
-        android:id="@+id/etidClienteOS"
-        android:layout_width="270dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="0911223344"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView11" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="90dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:text="ID del Cliente:"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
-
     <Spinner
         android:id="@+id/spnVehiculoOS"
         android:layout_width="270dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/etFechaOrdenServicio"
         app:layout_constraintTop_toTopOf="@+id/textView15" />
 
     <TextView
@@ -106,7 +82,7 @@
         android:layout_width="90dp"
         android:layout_height="20dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:text="Placa"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,7 +104,7 @@
         android:layout_width="139dp"
         android:layout_height="20dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="Servicios Agregados:"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,7 +115,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginBottom="5dp"
         android:text="Total: $"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnGuardarOS"
@@ -150,19 +126,17 @@
         android:id="@+id/etPlacaOrdenServicio"
         android:layout_width="270dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="10dp"
         android:ems="10"
         android:inputType="text"
-        android:text="ej: ABC123"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="ABC-123"
+        app:layout_constraintStart_toStartOf="@+id/spnVehiculoOS"
         app:layout_constraintTop_toTopOf="@+id/textView17" />
 
     <Spinner
         android:id="@+id/spnNombreServicio"
         android:layout_width="130dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/etCantidadServicioOS"
+        app:layout_constraintStart_toStartOf="@+id/etPlacaOrdenServicio"
         app:layout_constraintTop_toTopOf="@+id/textView18" />
 
     <EditText
@@ -172,13 +146,13 @@
         android:layout_marginEnd="10dp"
         android:ems="10"
         android:inputType="number"
-        android:text="cantidad"
+        android:hint="Cantidad"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/spnNombreServicio" />
 
     <Button
         android:id="@+id/btnAgregarServicioOS"
-        android:layout_width="390dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
@@ -192,8 +166,8 @@
         android:id="@+id/rvServiciosAgregadosOS"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/btnGuardarOS"
         app:layout_constraintEnd_toEndOf="parent"
@@ -204,7 +178,7 @@
 
     <Button
         android:id="@+id/btnGuardarOS"
-        android:layout_width="190dp"
+        android:layout_width="150dp"
         android:layout_height="52dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="2dp"
@@ -239,13 +213,12 @@
         android:id="@+id/spnTecnicoOS"
         android:layout_width="270dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/spnNombreServicio"
         app:layout_constraintTop_toTopOf="@+id/textView12" />
 
     <Button
         android:id="@+id/btnCancelarOS"
-        android:layout_width="190dp"
+        android:layout_width="150dp"
         android:layout_height="52dp"
         android:layout_marginEnd="10dp"
         android:text="Cancelar y volver"
