--- a/app/src/main/res/layout/activity_detalle_orden_servicio.xml
+++ b/app/src/main/res/layout/activity_detalle_orden_servicio.xml
@@ -50,6 +50,8 @@
         android:layout_height="160dp"
         android:layout_marginStart="11dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="11dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
@@ -119,8 +121,10 @@
         android:layout_height="0dp"
         android:layout_marginStart="11dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="11dp"
         android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/tvTotalDetalleOS"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView30" />
 
