--- a/app/src/main/res/layout/lista_orden_servicio_activity.xml
+++ b/app/src/main/res/layout/lista_orden_servicio_activity.xml
@@ -38,7 +38,9 @@
         android:id="@+id/rvOrdenServicio"
         android:layout_width="381dp"
         android:layout_height="582dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
