--- a/app/src/main/res/layout/lista_servicio_activity.xml
+++ b/app/src/main/res/layout/lista_servicio_activity.xml
@@ -23,9 +23,9 @@
 
     <Button
         android:id="@+id/btnAgregarServicio"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="31dp"
         android:text="Agregar Servicio"
@@ -38,7 +38,9 @@
         android:id="@+id/rvServicios"
         android:layout_width="388dp"
         android:layout_height="589dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,10 +48,10 @@
 
     <Button
         android:id="@+id/btnRegresarServicio"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="30dp"
         android:text="Regresar al menú"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
