--- a/app/src/main/res/layout/activity_agregar_servicio.xml
+++ b/app/src/main/res/layout/activity_agregar_servicio.xml
@@ -23,41 +23,47 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="5dp"
         android:text="Nombre del Servicio"
         app:layout_constraintBottom_toTopOf="@+id/etNombreServicio"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/etNombreServicio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="75dp"
         android:ems="10"
+        android:hint="Nombre del Servicio"
         android:inputType="text"
-        android:text="Nombre del Servicio"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="100dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/etPrecioServicio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="101dp"
         android:ems="10"
+        android:hint="Precio del Servicio"
         android:inputType="text"
-        android:text="Precio del Servicio"
-        app:layout_constraintTop_toBottomOf="@+id/etNombreServicio"
-        tools:layout_editor_absoluteX="100dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etNombreServicio" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="5dp"
         android:text="Precio del Servicio"
         app:layout_constraintBottom_toTopOf="@+id/etPrecioServicio"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnGuardarServicio"
