--- a/app/src/main/res/layout/item_servicio.xml
+++ b/app/src/main/res/layout/item_servicio.xml
@@ -9,16 +9,16 @@
     app:cardElevation="4dp">
 
     <LinearLayout
-        android:layout_width="390dp"
-        android:layout_height="178dp"
+        android:layout_width="382dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="16dp"
-        tools:ignore="MissingConstraints">
+        tools:layout_editor_absoluteY="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -39,7 +39,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -60,7 +60,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -81,7 +81,7 @@
 
         <Button
             android:id="@+id/btnEditarServicio"
-            android:layout_width="365dp"
+            android:layout_width="370dp"
             android:layout_height="wrap_content"
             android:text="Editar" />
     </LinearLayout>
