Pantallas de las opcion generar factura

--- a/app/src/main/res/layout/activity_agregar_factura.xml
+++ b/app/src/main/res/layout/activity_agregar_factura.xml
@@ -7,4 +7,126 @@
     android:layout_height="match_parent"
     tools:context=".activities.activitiesFactura.AgregarFactura">
 
+    <TextView
+        android:id="@+id/textView43"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:text="Generación de Factura"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView45"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="40dp"
+        android:text="Seleccionar Empresa:"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView43" />
+
+    <Spinner
+        android:id="@+id/spnClienteEmpresarial"
+        android:layout_width="380dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView45" />
+
+    <TextView
+        android:id="@+id/textView47"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
+        android:text="Año"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView50" />
+
+    <TextView
+        android:id="@+id/textView49"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Mes"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/textView47"
+        app:layout_constraintTop_toBottomOf="@+id/textView47" />
+
+    <Spinner
+        android:id="@+id/spnMesEmpresarial"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        app:layout_constraintStart_toStartOf="@+id/etAnioEmpresarial"
+        app:layout_constraintTop_toTopOf="@+id/textView49" />
+
+    <EditText
+        android:id="@+id/etAnioEmpresarial"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="10dp"
+        android:ems="10"
+        android:hint="20##"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView47"
+        app:layout_constraintTop_toTopOf="@+id/textView47" />
+
+    <Button
+        android:id="@+id/btnRegresarGenerarFactura"
+        android:layout_width="130dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="25dp"
+        android:text="Cancelar y Regresar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnGuardarFactura" />
+
+    <Button
+        android:id="@+id/btnGuardarFactura"
+        android:layout_width="130dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginBottom="20dp"
+        android:text="Guardar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView50"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:text="Periodo:"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spnClienteEmpresarial" />
+
+    <TextView
+        android:id="@+id/textView55"
+        android:layout_width="70dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="30dp"
+        android:text="Fecha de creación:"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/textView50"
+        app:layout_constraintTop_toBottomOf="@+id/spnMesEmpresarial" />
+
+    <EditText
+        android:id="@+id/etFechaCreacion"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:ems="10"
+        android:hint="dd-mm-yyyy"
+        android:inputType="date"
+        app:layout_constraintStart_toStartOf="@+id/spnMesEmpresarial"
+        app:layout_constraintTop_toTopOf="@+id/textView55" />
 </androidx.constraintlayout.widget.ConstraintLayout>
