--- a/app/src/main/res/layout/item_factura.xml
+++ b/app/src/main/res/layout/item_factura.xml
@@ -1,93 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="360dp"
+    android:layout_height="160dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
+
     <LinearLayout
-        android:layout_width="363dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_width="360dp"
+        android:layout_height="160dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textView42"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Cliente:"
+                android:text="Cliente Empresarial:"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvNombreClienteOrdenServicio"
+                android:id="@+id/tvNombreEmpresarial"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Nombre del cliente" />
+                android:text="TextView" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/textView44"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Fecha:"
+                android:text="Fecha de creación:"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvFechaOrdenServicio"
+                android:id="@+id/tvFechaEmpresarial"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="dd/mm/yy" />
-
+                android:text="TextView" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/textView46"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Placa:"
+                android:text="Periodo:"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvPlacaOrdenServicio"
+                android:id="@+id/tvPeriodoEmpresarial"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Placa del vehiculo" />
+                android:text="TextView" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/textView48"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -95,19 +93,17 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvTotalOrdenServicio"
+                android:id="@+id/tvTotalEmpresarial"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="$" />
+                android:text="TextView" />
         </LinearLayout>
 
         <Button
-            android:id="@+id/btnDetallesOrdenServicio"
+            android:id="@+id/btnDetalleEmpresarial"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Más Detalles" />
-
+            android:text="Más detalles" />
     </LinearLayout>
-
 </androidx.cardview.widget.CardView>
