--- a/app/src/main/res/layout/item_servicio_factura.xml
+++ b/app/src/main/res/layout/item_servicio_factura.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
     <LinearLayout
-        android:layout_width="363dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_width="330dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        tools:layout_editor_absoluteX="60dp"
+        tools:layout_editor_absoluteY="65dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,20 +21,67 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textView53"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Cliente:"
+                android:text="Servicio:"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvNombreClienteOrdenServicio"
+                android:id="@+id/tvNombreServicioFactura"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Nombre del cliente" />
+                android:text="TextView" />
         </LinearLayout>
+
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView65"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Costo unitario:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvPrecioUnitarioServicioFactura"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView63"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Cantidad:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvCantidadServicioFactura"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="TextView" />
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="#BDBDBD" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,70 +89,20 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/textView67"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Fecha:"
+                android:text="Total:"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvFechaOrdenServicio"
+                android:id="@+id/tvSubtotalServicioFactura"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="dd/mm/yy" />
-
+                android:text="TextView" />
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Placa:"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tvPlacaOrdenServicio"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Placa del vehiculo" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Total a Pagar:"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tvTotalOrdenServicio"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="$" />
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/btnDetallesOrdenServicio"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Más Detalles" />
 
     </LinearLayout>
-
 </androidx.cardview.widget.CardView>
