--- a/app/src/main/res/layout/lista_factura_activity.xml
+++ b/app/src/main/res/layout/lista_factura_activity.xml
@@ -21,29 +21,32 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnGenerarFactura"
         android:layout_width="130dp"
         android:layout_height="55dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:text="Generar Factura"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="58dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnRegresarFactura"
         android:layout_width="136dp"
         android:layout_height="55dp"
         android:layout_marginEnd="20dp"
         android:text="Regresar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button" />
+        app:layout_constraintTop_toTopOf="@+id/btnGenerarFactura" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvListaFactura"
         android:layout_width="390dp"
         android:layout_height="603dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="129dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnGenerarFactura" />
 </androidx.constraintlayout.widget.ConstraintLayout>
